# RetoLiverpool

./: .gitignore  README.md
DWH/: SQL.txt
backend/: main.py  modelo participación mercado.ipynb  modelo_en_python.py  modelo_participacion_mercado.joblib  modelo_renovacion.joblib  pyproject.toml  random_fores_equipo3nuevo.joblib
frontend2/: agente_bolo.py  main.py  pyproject.toml
frontend2/assets/: custom.css
frontend2/pages/: Dashboards.py  footer.py  header.py  index.py  marca.py  predictivo.py
frontend2/rag_agent/: agent.py  agent.py.save  newagente.py  prueba.py
frontend2/rag_agent/.adk/: session.db
ml/: (Historico)_TI3002C_PythonML_Liverpool (1).ipynb  pyproject.toml
